@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvPs.test,v 1.5.2.1 2003/05/11 00:57:10 hobbs Exp $
+# RCS: @(#) $Id: canvPs.test,v 1.5.2.2 2006/03/14 04:59:44 dgp Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -94,7 +94,7 @@ test canvPs-2.4 {test writing to channel and file, same output} {pcOnly} {
     set status
 } ok
 
-test canvPs-3.1 {test ps generation with an embedded window} {} {
+test canvPs-3.1 {test ps generation with an embedded window} {notAqua} {
     removeFile bar.ps
     destroy .c
     pack [canvas .c -width 200 -height 200 -background white]
