@@ -127,6 +127,7 @@ namespace eval tk {
 namespace import -force tk::test::*
 
 namespace import -force tcltest::testConstraint
+testConstraint notAqua [expr {[tk windowingsystem] ne "aqua"}]
 testConstraint userInteraction 0
 testConstraint nonUnixUserInteraction [expr {[testConstraint userInteraction]
                                                 || [testConstraint unix]}]
